generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  DOCTOR
  PATIENT
}

enum Gender {
  MALE
  FEMALE
  OTHER
}

model User {
  id        Int      @id @default(autoincrement())
  firstName String
  lastName  String
  email     String   @unique
  password  String
  role      Role
  createdAt DateTime @default(now())

  doctorProfile  DoctorProfile?
  patientProfile PatientProfile?
}

model DoctorProfile {
  id               Int      @id @default(autoincrement())
  specialization   String
  experience       Int
  qualification    String
  consultationFee  Float
  availability     String
  profileDetails   String?

  userId Int @unique
  user   User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model PatientProfile {
  id                    Int      @id @default(autoincrement())
  age                   Int
  gender                Gender
  contactDetails        String
  healthInformation     String?

  userId Int @unique
  user   User @relation(fields: [userId], references: [id], onDelete: Cascade)
}